<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_margin="2dp"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
    >

        <ImageView
                android:id="@+id/img_user_avatar"
                android:layout_width="match_parent"
                android:layout_height="140dp"/>
        <TextView
                android:id="@+id/txt_repo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repo_title"

        />
        <TextView
                android:id="@+id/txt_repo_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/repo_description"


        />
        <TextView
                android:id="@+id/txt_fork_count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/forks_count"

        />
        <TextView
                android:id="@+id/txt_language"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/language"

        />
        <TextView
                android:id="@+id/txt_repo_creation_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/repo_creation_date"
        />
    </LinearLayout>

</android.support.v7.widget.CardView>